= ActiveMerchant CHANGELOG

* Fix StartDate in ProtxGatewy [cody]
* Add support for refunds and continuous authority references to DataCashGateway [joel.chippindale]
* Fix gross in HiTrust notification. Don't use Money object in Verifi gateway [cody]
* Initial implementation of Payflow Name-Value API [Greg Furmanek]
* Add support for CyberSource credits [mjuneja]

== Version 1.3.2 (February 24, 2008)

* Actually fix the bug by adding extdata element to Payflow Requests [cody]
* Fix bug with adding name to Payflow requests [cody]
* Gateways will now look for CreditCard#brand before looking for CreditCard#type [cody]
* Make before_validate in CreditCard more clear [keith_du...@mac.com, cody]
* Don't send full Australian state names to PayPal [cody]
* Return last_digits that are less than 4 characters long [cody]
* Fix Bug with Authorize.Net ARB Remote Test [patrick.t.joyce]
* Add support for forcing test mode on Secure Pay AU gateway [cody]
* Update Secure Pay Au to meet specs for MessageInfo elements [cody]
* Add support for the Australian Secure Pay payment gateway [cody]
* Allow LinkPoint cancellations for recurring billing. [yanagimoto.shin]
* Add support for Åland Islands to the country list [cody]

== Version 1.3.1 (January 28, 2008)

* Rename BrainTreeGateway to BraintreeGateway, but keep alias to old naming for backwards compatibility [cody]

== Version 1.3.0 (January 28, 2008)

* Remove attr_readers for url and response from Gateway [cody]
* Remove @url from EfsnetGateway [cody]
* Remove @response instance variable in QuickpayGateway. [cody]
* Remove @response instance variable in PsigateGateway. Don't use billing address for shipping [cody]
* Remove @response instance variable in PaypalGateway. Don't use billing address for shipping. [cody]
* Remove @response instance variable in PayflowGateway [cody]
* Remove @response instance variable in MonerisGateway [cody]